added new package

--- a/todo-list-maui/todo-list-maui.csproj
+++ b/todo-list-maui/todo-list-maui.csproj
@@ -64,4 +64,8 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<PackageReference Include="Realm" Version="10.18.0" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+	</ItemGroup>
 </Project>
