--- a/todo-list-maui/todo-list-maui.csproj
+++ b/todo-list-maui/todo-list-maui.csproj
@@ -65,7 +65,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Realm" Version="10.18.0" />
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
+	  <MauiXaml Update="MainPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	</ItemGroup>
 </Project>
